@@ -1958,6 +1958,54 @@
 	RET R15
 
 
+;; prim_numberp
+;; Recieves argslist in R0
+;; Returns #t if NUMBER else NIL
+:prim_numberp_String
+	"number?"
+:prim_numberp
+	CMPSKIPI.NE R0 $NIL         ; If NIL Expression
+	RET R15                     ; Just get the Hell out
+
+	LOAD32 R0 R0 4              ; Get ARGS->CAR
+	LOAD32 R0 R0 0              ; Get ARGS->CAR->TYPE
+	CMPSKIPI.NE R0 4            ; If NUMBER
+	JUMP @prim_numberp_0        ; Return TEE
+
+	LOADUI R0 $NIL              ; Otherwise return NIL
+	JUMP @prim_numberp_done
+
+:prim_numberp_0
+	LOADUI R0 $TEE              ; Make TEE
+
+:prim_numberp_done
+	RET R15
+
+
+;; prim_symbolp
+;; Recieves argslist in R0
+;; Returns #t if SYMBOL else NIL
+:prim_symbolp_String
+	"symbol?"
+:prim_symbolp
+	CMPSKIPI.NE R0 $NIL         ; If NIL Expression
+	RET R15                     ; Just get the Hell out
+
+	LOAD32 R0 R0 4              ; Get ARGS->CAR
+	LOAD32 R0 R0 0              ; Get ARGS->CAR->TYPE
+	CMPSKIPI.NE R0 8            ; If SYMBOL
+	JUMP @prim_symbolp_0        ; Return TEE
+
+	LOADUI R0 $NIL              ; Otherwise return NIL
+	JUMP @prim_symbolp_done
+
+:prim_symbolp_0
+	LOADUI R0 $TEE              ; Make TEE
+
+:prim_symbolp_done
+	RET R15
+
+
 ;; prim_stringp
 ;; Recieves argslist in R0
 ;; Returns #t if CHAR else NIL
@@ -2701,6 +2749,20 @@
 	CALLI R15 @make_prim        ; MAKE_PRIM
 	MOVE R1 R0                  ; Put Primitive in correct location
 	LOADUI R0 $prim_charp_String ; Using PRIM_CHARP_STRING
+	CALLI R15 @make_sym         ; MAKE_SYM
+	CALLI R15 @spinup           ; SPINUP
+
+	LOADUI R0 $prim_numberp     ; Using PRIM_NUMBERP
+	CALLI R15 @make_prim        ; MAKE_PRIM
+	MOVE R1 R0                  ; Put Primitive in correct location
+	LOADUI R0 $prim_numberp_String ; Using PRIM_NUMBERP_STRING
+	CALLI R15 @make_sym         ; MAKE_SYM
+	CALLI R15 @spinup           ; SPINUP
+
+	LOADUI R0 $prim_symbolp     ; Using PRIM_SYMBOLP
+	CALLI R15 @make_prim        ; MAKE_PRIM
+	MOVE R1 R0                  ; Put Primitive in correct location
+	LOADUI R0 $prim_symbolp_String ; Using PRIM_SYMBOLP_STRING
 	CALLI R15 @make_sym         ; MAKE_SYM
 	CALLI R15 @spinup           ; SPINUP
 
