@@ -42,6 +42,7 @@ Added char? primitive to stage2 lisp
 Added string? primitive to stage2 lisp
 Added make_string internal function to stage2 lisp
 Added list->string primitive to stage2 lisp
+Added number? and symbol? to stage2 lisp
 
 ** Changed
 Minor refactor of stage3 FORTH by reepa
